@@ -299,7 +299,7 @@ public class PERichTableDataType extends DynamicDataType {
 		@Override
 		public String getRepresentation(MemBuffer buf, Settings settings, int length) {
 			try {
-				return new Integer(buf.getInt(0) ^ mask).toString();
+				return Integer.valueOf(buf.getInt(0) ^ mask).toString();
 			}
 			catch (MemoryAccessException mae) {
 				return "0";
